For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit, if applicable>

Documentation changes:	<`none' or give pointer to them>
Bootstrapping needed:	<`none' or give pointer to instructions>
Tests for new features:	<`no new features', `no tests for new features', or
			 give pointer to test files>

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
2.0.20.alpha.8

Wed Nov 20 14:46:51 1996  Kevin Layer  <layer@ultra>

	* RelNotes.txt: new file
	* fi-subproc.el: new fi::set-environment-use-process-environment
	which doesn't side-effect process-environment (which was a
	horrible thing, in the first place).

*******************************************************************************
Wed Oct 30 09:55:13 1996  Kevin Layer  <layer@freezer>

	* Doc.el: fix error during doc creation
	* Makefile: `docs' works again
	* UserGuide.n: various updates

	the rest are to deal with compiler warnings
	* fi-filec.el: subprocess-prompt-pattern -> fi::prompt-pattern
	* fi-keys.el: subprocess-prompt-pattern -> fi::prompt-pattern
	* fi-rlogin.el: subprocess-prompt-pattern -> fi::prompt-pattern
	* fi-su.el: subprocess-prompt-pattern -> fi::prompt-pattern
	* fi-subproc.el: subprocess-prompt-pattern -> fi::prompt-pattern
	* fi-telnet.el: subprocess-prompt-pattern -> fi::prompt-pattern

Tue Oct 29 10:50:01 1996    <layer@HOBART>

	* fi-keys.el: new fi:define-global-lisp-mode-bindings
	* fi-lep.el: use fi::cl-file-position-to-point to properly locate
	source definitions

	* fi-basic-lep.el: get rid of compiler warnings
	* fi-lep.el: completions to *Completions* instead of *Help*

	* fi-subproc.el: bug3729: on windows, fi:common-lisp asks for
	executable and image file, as well as all the other questions
	asked on unix.
